--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
             </div>
             <div class="right">
-                <a href="/">Home</a>
-                <a href="/about">Nosotros</a>
-                <a href="/contact">Contacto</a>
+                <a href="/index.html">Home</a>
+                <a href="#">Nosotros</a>
+                <a href="#">Contacto</a>
                 <a href="#"><i class="fa-regular fa-user" style="color: #ffffff;"></i> Mi Cuenta</a>
             </div>
         </div>
@@ -41,13 +41,13 @@
     <main id="main-container">
         <section class="shortcuts__menu">
             <ul>
-                <li><i class="fa-solid fa-bag-shopping fa-2xl"></i><a href="#">Combos</a></li>
+                <li><i class="fa-solid fa-bag-shopping fa-2xl"></i><a href="#experience">Descubre</a></li>
                 <li><i class="fa-solid fa-cart-shopping fa-2xl"></i>
                     <a href="#">Tienda</a>
                 </li>
-                <li><i class="fa-solid fa-wifi fa-2xl"></i><a href="#">Conectividad</a></li>
-                <li><i class="fa-solid fa-house-chimney-window fa-2xl"></i><a href="#">Hogar</a></li>
-                <li><i class="fa-solid fa-mobile-screen-button fa-2xl"></i><a href="#">Celulares</a></li>
+                <li><i class="fa-solid fa-gamepad fa-2x1"></i><a href="#">Gaming</a></li>
+                <li><i class="fa-solid fa-house-chimney-window fa-2xl"></i><a href="#hogarId">Hogar</a></li>
+                <li><i class="fa-solid fa-mobile-screen-button fa-2xl"></i><a href="#celulares">Celulares</a></li>
             </ul>
         </section>
         <div id="hero-container">
@@ -127,7 +127,7 @@
                 
             </div>
         </section>
-        <div class="experiencia">
+        <div id="experience" class="experiencia">
             <h2>Semana de descuentos!</h2>
             <div class="card-experiencias">
                 <div class="cardE">
@@ -157,12 +157,12 @@
             </div>
 
         </div>
-        <div class="hogar">
+        <div id="hogarId" class="hogar">
             <h2>Las mejores opciones para tu hogar</h2>
 
         </div>
 
-        <div class="nota">
+        <div id="celulares" class="nota">
             <h2>Celulares</h2>
 
         </div>
