--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
     <header>
         <div class="header-topper">
-            <div class="left">
+           <!--  <div class="left">
 
-            </div>
+            </div> -->
             <div class="right">
                 <a href="/index.html">Home</a>
                 <a href="#">Nosotros</a>
@@ -26,7 +26,7 @@
             </div>
         </div>
         </div>
-        <div id="header-container">
+        <div id="header-container" class="sticky">
             <div class="logo">
                 <h1>GUACAM </h1>
                 <span> •Store</span>
@@ -44,7 +44,7 @@
         <section class="shortcuts__menu">
             <ul>
                 <li><a href="#experience"><i class="fa-solid fa-bag-shopping fa-2xl"></i>Descubre</a></li>
-                <li><a href="#"><i class="fa-solid fa-cart-shopping fa-2xl"></i>Tienda</a></li>
+                <li><a href="#"><i class="fa-solid fa-cart-shopping fa-2xl"></i>Carrito</a></li>
                 <li><a href="#"><i class="fa-solid fa-gamepad "></i>Gaming</a></li>
                 <li><a href="#hogarId"><i class="fa-solid fa-house-chimney-window fa-2xl"></i>Hogar</a></li>
                 <li><a href="#celulares"><i class="fa-solid fa-mobile-screen-button fa-2xl"></i>Celulares</a></li>
@@ -52,12 +52,12 @@
         </section>
         <div id="hero-container">
             <div class="hero-promo">
-                <img src="/assets/productos/hogar/termo-stanley-780x405.png"    alt="stanlyCups">
+                <!--  -->
                 <div class="hero-text">
                     <h2>TERMO • ACERO INOXIDABLE 2,5 LITROS</h2>
-                    <p> <span> Marca:</span> Stanley.
+                    <p><span> Marca:</span> Stanley.
                         <span> Modelo:</span> Adventure.
-                         Envío GRATIS a través de MercadoEnvíos!
+                        Envío GRATIS a través de MercadoEnvíos!
                         <span>GARANTÍA</span>
                         • Garantía de por vida oficial de fábrica Stanley Argentina por defectos de fabricación
                         únicamente y
@@ -153,11 +153,18 @@
 
         </div>
         <div id="hogarId" class="hogar">
+            <div class="hogar-content">
+
+            </div>
             <h2>Las mejores opciones para tu hogar</h2>
 
         </div>
 
-        <div id="celulares" class="nota">
+        <div id="celulares" class="celulares">
+            <div class="celulares-content">
+                
+            </div>
+
             <h2>Celulares</h2>
 
         </div>
