--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div id="header-container" class="sticky">
             <div class="logo">
-                <h1>GUACAM </h1>
+                <a href="index.html"><h1>GUACAM </h1></a>
                 <span> •Store</span>
             </div>
             <nav>
