--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         únicamente y
                         a través de sus centros técnicos oficiales (no en el local de venta del producto).
                     </p>
-                    <button>Comprar</button> <i class="fa-brands fa-facebook fa-2xl"></i>
+                    <button>Comprar</button> <a href="www.facebook.com"><i class="fa-brands fa-facebook fa-2xl"></i></a>
                 </div>
             </div>
 
@@ -220,6 +220,7 @@
             <p>Todos los derechos reservados <span> <a href="#" target="_blank">GUACAM</a> </span> </p>
         </div>
     </footer>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
