--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="header-topper">
-           <!--  <div class="left">
+            <!--  <div class="left">
 
             </div> -->
             <div class="right">
@@ -28,15 +28,28 @@
         </div>
         <div id="header-container" class="sticky">
             <div class="logo">
-                <a href="index.html"><h1>GUACAM </h1></a>
+                <a href="index.html">
+                    <h1>GUACAM </h1>
+                </a>
                 <span> •Store</span>
             </div>
             <nav>
-                <button id="nav-button">
-                    <i class="fa-solid fa-bars"></i>
-                    <p>Menú</p>
-                </button>
+                <div id="nav-list">
+                    <div class="nav-links">
+                        <a href="index.html">Home</a>
+                        <a href="#">Nosotros</a>
+                        <a href="#">Contacto</a>
+                        <a href="#"><i class="fa-solid fa-user" style="color: #ffffff;"></i> Mi Cuenta</a>
+                        <a href="#"><i class="fa-solid fa-cart-shopping fa-2xl"></i>Carrito</a>
+                        <a href="#experience"><i class="fa-solid fa-bag-shopping fa-2xl"></i>Descubre</a>
+                        <a href="#"><i class="fa-solid fa-dice-five fa-2xl"></i>Gaming</a>
+                        <a href="#hogarId"><i class="fa-solid fa-house-chimney-window fa-2xl"></i>Hogar</a>
+                        <a href="#celulares"><i class="fa-solid fa-mobile-screen-button fa-2xl"></i>Celulares</a>
+                    </div>
+                </div>
             </nav>
+            <button id="button-menu" class="button-menu">
+                <i class="fa-solid fa-bars"></i>Menú</button>
         </div>
 
     </header>
@@ -45,7 +58,7 @@
             <ul>
                 <li><a href="#experience"><i class="fa-solid fa-bag-shopping fa-2xl"></i>Descubre</a></li>
                 <li><a href="#"><i class="fa-solid fa-cart-shopping fa-2xl"></i>Carrito</a></li>
-                <li><a href="#"><i class="fa-solid fa-gamepad "></i>Gaming</a></li>
+                <li><a href="#"><i class="fa-solid fa-dice-five fa-2xl"></i>Gaming</a></li>
                 <li><a href="#hogarId"><i class="fa-solid fa-house-chimney-window fa-2xl"></i>Hogar</a></li>
                 <li><a href="#celulares"><i class="fa-solid fa-mobile-screen-button fa-2xl"></i>Celulares</a></li>
             </ul>
@@ -63,7 +76,10 @@
                         únicamente y
                         a través de sus centros técnicos oficiales (no en el local de venta del producto).
                     </p>
-                    <button>Comprar</button> <a href="www.facebook.com"><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                    <div class="btns-container">
+                        <button>Comprar</button> <a href="http://www.facebook.com"><i
+                                class="fa-brands fa-facebook fa-2xl"></i></a>
+                    </div>
                 </div>
             </div>
 
@@ -162,7 +178,7 @@
 
         <div id="celulares" class="celulares">
             <div class="celulares-content">
-                
+
             </div>
 
             <h2>Celulares</h2>
