--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a href="index.html">Home</a>
                         <a href="#">Nosotros</a>
                         <a href="#">Contacto</a>
-                        <a href="#"><i class="fa-solid fa-user" style="color: #ffffff;"></i> Mi Cuenta</a>
+                        <a href="#"><i class="fa-solid fa-user"></i> Mi Cuenta</a>
                         <a href="#"><i class="fa-solid fa-cart-shopping fa-2xl"></i>Carrito</a>
                         <a href="#experience"><i class="fa-solid fa-bag-shopping fa-2xl"></i>Descubre</a>
                         <a href="#"><i class="fa-solid fa-dice-five fa-2xl"></i>Gaming</a>
@@ -58,7 +58,7 @@
             <ul>
                 <li><a href="#experience"><i class="fa-solid fa-bag-shopping fa-2xl"></i>Descubre</a></li>
                 <li><a href="#"><i class="fa-solid fa-cart-shopping fa-2xl"></i>Carrito</a></li>
-                <li><a href="#"><i class="fa-solid fa-dice-five fa-2xl"></i>Gaming</a></li>
+                <li><a href="#gaming-content"><i class="fa-solid fa-dice-five fa-2xl"></i>Gaming</a></li>
                 <li><a href="#hogarId"><i class="fa-solid fa-house-chimney-window fa-2xl"></i>Hogar</a></li>
                 <li><a href="#celulares"><i class="fa-solid fa-mobile-screen-button fa-2xl"></i>Celulares</a></li>
             </ul>
@@ -134,10 +134,11 @@
 
             </div>
         </section>
+
         <div id="experience" class="experiencia">
-            <h2>Semana de descuentos!</h2>
+            <h2>Semana de Ofertas!</h2>
             <div class="card-experiencias">
-                <div class="cardE">
+                <!-- <div class="cardE">
                     <h3>Auriculares</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore non rem aspernatur tempore atque
                         enim dolore doloribus. $<span> 5.000</span></p>
@@ -165,8 +166,13 @@
 
                     <button class="cardE_Btn">Lo Quiero!</button>
                 </div>
+            </div> -->
+        </div>
+        <div id="gaming" class="gaming">
+            <div id="gaming-content">
+
             </div>
-
+            <!-- <h2>Consolas y accesorios</h2> -->
         </div>
         <div id="hogarId" class="hogar">
             <div class="hogar-content">
@@ -194,7 +200,7 @@
             </div>
 
         </div>
-        <div class="descubri">
+        <div class="descubre">
 
         </div>
         <div class="beneficios">
