--- a/index.html
+++ b/index.html
@@ -138,13 +138,6 @@
         <div id="experience" class="experiencia">
             <h2>Semana de Ofertas!</h2>
             <div class="card-experiencias">
-                <!-- <div class="cardE">
-                    <h3>Auriculares</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore non rem aspernatur tempore atque
-                        enim dolore doloribus. $<span> 5.000</span></p>
-
-                    <button class="cardE_Btn">Lo Quiero!</button>
-                </div>
                 <div class="cardE">
                     <h3>Auriculares</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore non rem aspernatur tempore atque
@@ -166,46 +159,53 @@
 
                     <button class="cardE_Btn">Lo Quiero!</button>
                 </div>
-            </div> -->
-        </div>
-        <div id="gaming" class="gaming">
-            <div id="gaming-content">
+                <div class="cardE">
+                    <h3>Auriculares</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore non rem aspernatur tempore atque
+                        enim dolore doloribus. $<span> 5.000</span></p>
+
+                    <button class="cardE_Btn">Lo Quiero!</button>
+                </div>
+            </div>
+            </div>
+            <div id="gaming" class="gaming">
+                <div id="gaming-content">
+
+                </div>
+                <h2>Consolas y accesorios</h2>
+            </div>
+            <div id="hogarId" class="hogar">
+                <div class="hogar-content">
+
+                </div>
+                <h2>Las mejores opciones para tu hogar</h2>
 
             </div>
-            <!-- <h2>Consolas y accesorios</h2> -->
-        </div>
-        <div id="hogarId" class="hogar">
-            <div class="hogar-content">
+
+            <div id="celulares" class="celulares">
+                <div class="celulares-content">
+
+                </div>
+
+                <h2>Celulares</h2>
 
             </div>
-            <h2>Las mejores opciones para tu hogar</h2>
-
-        </div>
-
-        <div id="celulares" class="celulares">
-            <div class="celulares-content">
+            <div class="redes">
+                <h2>Seguinos en nuestras redes</h2>
+                <div class="redes_Iconos">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                </div>
 
             </div>
+            <div class="descubre">
 
-            <h2>Celulares</h2>
-
-        </div>
-        <div class="redes">
-            <h2>Seguinos en nuestras redes</h2>
-            <div class="redes_Iconos">
-                <i class="fa-brands fa-facebook-f"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-youtube"></i>
             </div>
+            <div class="beneficios">
 
-        </div>
-        <div class="descubre">
-
-        </div>
-        <div class="beneficios">
-
-        </div>
+            </div>
 
     </main>
     <footer id="footer-container">
