--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a href="#"><i class="fa-solid fa-user"></i> Mi Cuenta</a>
                         <a href="#"><i class="fa-solid fa-cart-shopping fa-2xl"></i>Carrito</a>
                         <a href="#experience"><i class="fa-solid fa-bag-shopping fa-2xl"></i>Descubre</a>
-                        <a href="#"><i class="fa-solid fa-dice-five fa-2xl"></i>Gaming</a>
+                        <a href="#gaming-content"><i class="fa-solid fa-dice-five fa-2xl"></i>Gaming</a>
                         <a href="#hogarId"><i class="fa-solid fa-house-chimney-window fa-2xl"></i>Hogar</a>
                         <a href="#celulares"><i class="fa-solid fa-mobile-screen-button fa-2xl"></i>Celulares</a>
                     </div>
