--- a/index.html
+++ b/index.html
@@ -84,57 +84,14 @@
             </div>
 
         </div>
-        <section class="cards-container">
-            <h2>Ofertas especiales</h2>
-            <div class="cards-ofertas">
-                <div class="card">
-                    <img src="/assets/productos/hogar/stanley-quencher-tumbler-april-2023-642b61bd06f19.png" alt="cup">
-                    <h3>Stanley Cup</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, maxime in odio numquam officia iste?
-                        $<span> 8.000</span>
-                    </p>
-                    <i class="fa-brands fa-cc-visa"></i>
-                    <i class="fa-brands fa-cc-mastercard"></i>
-                    <i class="fa-brands fa-cc-amex"></i>
-                    <p>Pagá en cuotas fijas</p>
-                </div>
-                <div class="card">
-                    <img src="/assets/productos/hogar/stanley-quencher-tumbler-april-2023-642b61bd06f19.png" alt="cup">
-                    <h3>Stanley Cup</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, maxime in odio numquam officia iste?
-                        $<span> 8.000</span>
-                    </p>
-                    <i class="fa-brands fa-cc-visa"></i>
-                    <i class="fa-brands fa-cc-mastercard"></i>
-                    <i class="fa-brands fa-cc-amex"></i>
-                    <p>Pagá en cuotas fijas</p>
-                </div>
-                <div class="card">
-                    <img src="/assets/productos/hogar/stanley-quencher-tumbler-april-2023-642b61bd06f19.png" alt="cup">
-                    <h3>Stanley Cup</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, maxime in odio numquam officia iste?
-                        $<span> 8.000</span>
-                    </p>
-                    <i class="fa-brands fa-cc-visa"></i>
-                    <i class="fa-brands fa-cc-mastercard"></i>
-                    <i class="fa-brands fa-cc-amex"></i>
-                    <p>Pagá en cuotas fijas</p>
-                </div>
-                <div class="card">
-                    <img src="/assets/productos/hogar/stanley-quencher-tumbler-april-2023-642b61bd06f19.png" alt="cup">
-                    <h3>Stanley Cup</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, maxime in odio numquam officia iste?
-                        $<span> 8.000</span>
-                    </p>
-                    <i class="fa-brands fa-cc-visa"></i>
-                    <i class="fa-brands fa-cc-mastercard"></i>
-                    <i class="fa-brands fa-cc-amex"></i>
-                    <p>Pagá en cuotas fijas</p>
-                </div>
+        <div class="cardsContainer">
+            <h2>Ofertas Especiales</h2>
+            <section id="cards-container" class="cards-container">
 
-            </div>
-        </section>
+                <div id="cards"></div>
 
+            </section>
+        </div>
         <div id="experience" class="experiencia">
             <h2>Semana de Ofertas!</h2>
             <div class="card-experiencias">
@@ -167,45 +124,45 @@
                     <button class="cardE_Btn">Lo Quiero!</button>
                 </div>
             </div>
-            </div>
-            <div id="gaming" class="gaming">
-                <div id="gaming-content">
-
-                </div>
-                <h2>Consolas y accesorios</h2>
-            </div>
-            <div id="hogarId" class="hogar">
-                <div class="hogar-content">
-
-                </div>
-                <h2>Las mejores opciones para tu hogar</h2>
+        </div>
+        <div id="gaming" class="gaming">
+            <div id="gaming-content">
 
             </div>
-
-            <div id="celulares" class="celulares">
-                <div class="celulares-content">
-
-                </div>
-
-                <h2>Celulares</h2>
+            <h2>Consolas y accesorios</h2>
+        </div>
+        <div id="hogarId" class="hogar">
+            <div class="hogar-content">
 
             </div>
-            <div class="redes">
-                <h2>Seguinos en nuestras redes</h2>
-                <div class="redes_Iconos">
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-youtube"></i>
-                </div>
+            <h2>Las mejores opciones para tu hogar</h2>
+
+        </div>
+
+        <div id="celulares" class="celulares">
+            <div class="celulares-content">
 
             </div>
-            <div class="descubre">
 
-            </div>
-            <div class="beneficios">
+            <h2>Celulares</h2>
 
+        </div>
+        <div class="redes">
+            <h2>Seguinos en nuestras redes</h2>
+            <div class="redes_Iconos">
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-youtube"></i>
             </div>
+
+        </div>
+        <div class="descubre">
+
+        </div>
+        <div class="beneficios">
+
+        </div>
 
     </main>
     <footer id="footer-container">
