--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
             <h2>Ofertas Especiales</h2>
             <section id="cards-container" class="cards-container">
 
-                <div id="cards"></div>
+                <div id="cards">
+                    
+                </div>
 
             </section>
         </div>
