--- a/index.html
+++ b/index.html
@@ -96,36 +96,9 @@
         </div>
         <div id="experience" class="experiencia">
             <h2>Semana de Ofertas!</h2>
-            <div class="card-experiencias">
-                <div class="cardE">
-                    <h3>Auriculares</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore non rem aspernatur tempore atque
-                        enim dolore doloribus. $<span> 5.000</span></p>
+            <div id="card-experiencias" class="card-experiencias">
 
-                    <button class="cardE_Btn">Lo Quiero!</button>
-                </div>
-                <div class="cardE">
-                    <h3>Auriculares</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore non rem aspernatur tempore atque
-                        enim dolore doloribus. $<span> 5.000</span></p>
-
-                    <button class="cardE_Btn">Lo Quiero!</button>
-                </div>
-                <div class="cardE">
-                    <h3>Auriculares</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore non rem aspernatur tempore atque
-                        enim dolore doloribus. $<span> 5.000</span></p>
-
-                    <button class="cardE_Btn">Lo Quiero!</button>
-                </div>
-                <div class="cardE">
-                    <h3>Auriculares</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore non rem aspernatur tempore atque
-                        enim dolore doloribus. $<span> 5.000</span></p>
-
-                    <button class="cardE_Btn">Lo Quiero!</button>
-                </div>
-            </div>
+        </div>
         </div>
         <div id="gaming" class="gaming">
             <div id="gaming-content">
