--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a href="#">Contacto</a>
                         <a href="#"><i class="fa-solid fa-user"></i> Mi Cuenta</a>
                         <a href="#"><i class="fa-solid fa-cart-shopping fa-2xl"></i>Carrito</a>
-                        <a href="#experience"><i class="fa-solid fa-bag-shopping fa-2xl"></i>Descubre</a>
+                        <a href="#descubre"><i class="fa-solid fa-bag-shopping fa-2xl"></i>Descubre</a>
                         <a href="#gaming-content"><i class="fa-solid fa-dice-five fa-2xl"></i>Gaming</a>
                         <a href="#hogarId"><i class="fa-solid fa-house-chimney-window fa-2xl"></i>Hogar</a>
                         <a href="#celulares"><i class="fa-solid fa-mobile-screen-button fa-2xl"></i>Celulares</a>
@@ -56,7 +56,7 @@
     <main id="main-container">
         <section class="shortcuts__menu">
             <ul>
-                <li><a href="#experience"><i class="fa-solid fa-bag-shopping fa-2xl"></i>Descubre</a></li>
+                <li><a href="#descubre"><i class="fa-solid fa-bag-shopping fa-2xl"></i>Descubre</a></li>
                 <li><a href="#"><i class="fa-solid fa-cart-shopping fa-2xl"></i>Carrito</a></li>
                 <li><a href="#gaming-content"><i class="fa-solid fa-dice-five fa-2xl"></i>Gaming</a></li>
                 <li><a href="#hogarId"><i class="fa-solid fa-house-chimney-window fa-2xl"></i>Hogar</a></li>
@@ -94,12 +94,16 @@
 
             </section>
         </div>
-        <div id="experience" class="experiencia">
+        <div id="descubre" class="contenedor-descubre">
             <h2>Semana de Ofertas!</h2>
+        
+        <div id="experience" class="experiencia">
+            
             <div id="card-experiencias" class="card-experiencias">
 
         </div>
         </div>
+    </div>
         <div id="gaming" class="gaming">
             <div id="gaming-content">
 
