--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div class="header-topper" >
+        <div class="header-topper">
             <!--  <div class="left">
 
             </div> -->
@@ -59,13 +59,15 @@
                     <input id="product-search" type="text" placeholder="Buscar por categorias">
                     <input type="submit" value="" class="btn-buscar">
                 </div>
-                <ol id="categorias">
+                <div id="categorias">
                     <h3>Categorias sugeridas:</h3>
-                    <span>Hogar</span>
-                    <span>Celulares</span>
-                    <span>Gaming</span>
-                    <span>Todas</span>
-                </ol>
+                    <ol>
+                        <span>Hogar</span>
+                        <span>Celulares</span>
+                        <span>Gaming</span>
+                        <span>Todas</span>
+                    </ol>
+                </div>
                 <div id="search-container">
             </form>
 
