--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <section class="buscador-productos">
             <form id="search-form">
                 <div class="alineaBusqueda">
-                    <input id="product-search" type="text" placeholder="Buscar Producto ">
+                    <input id="product-search" type="text" placeholder="Buscar Producto " required="yes">
                     <input type="submit" value="" class="btn-buscar">
                 </div>
                 <form id="categorias">
@@ -67,14 +67,10 @@
                         <button type="submit" data-categoria="gaming">Gaming</button>
                         <button type="submit" data-categoria="todas">Todas</button>
                     </div>
-
                 </form>
                 <div id="search-container"></div>
-
             </form>
 
-
-            </div>
         </section>
         <div class="slider">
             <div class="slides">
